# profgraph

./: .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  render.yaml
profgraph/: __init__.py  __main__.py  api.py  cache.py  grades.py  intel.py  models.py  nlp.py  prerequisites.py  rmp.py  server.py  universities.py
tests/: test_cache.py  test_e2e.py  test_intel.py  test_live.py  test_models.py  test_nlp.py  test_prerequisites.py
