[project]
name = "profgraph"
version = "0.2.0"
description = "AI Professor Intelligence MCP Server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
deploy = [
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
profgraph = "profgraph.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
